fix(leadspace): add center aligned lead space dynamic resizing

--- a/packages/styles/scss/components/leadspace/_leadspace.scss
+++ b/packages/styles/scss/components/leadspace/_leadspace.scss
@@ -284,7 +284,6 @@ $btn-min-width: 26;
 
       @include carbon--breakpoint(lg) {
         .#{$prefix}--leadspace__overlay {
-          position: absolute;
           height: 100%;
           padding: $spacing-10 0 0 0;
         }
